--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
                 <ul>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="KatalogBuku.html">Katalog</a></li>
+                        <li><a href="Buku.html">Buku</a></li>
 
                     </ul>
                 </ul>
