--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="katalogBuku.html">Katalog</a></li>
+                    <li><a href="Buku.html">Katalog</a></li>
                     <li><a href="login.html">Login/Register</a></li>
                 </ul>
             </nav>
