--- a/register.html
+++ b/register.html
@@ -12,8 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="KatalogBuku.html">Katalog</a></li>
-
+                    <li><a href="Buku.html">Katalog</a></li>
                 </ul>
             </nav>
         </header>
